Wed Sep 20 19:07:30 BST 2000 Olly Betts

	* More LocalMatch work.

Wed Sep 20 18:57:55 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make quartztest compile again.  (Though it fails)

Wed Sep 20 18:56:26 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* docs/Makefile.am, only build apidocs when making a dist, leave full
	  documentation for a local install.

Wed Sep 20 18:26:33 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Updated Quartz to use AutoPtr

Wed Sep 20 17:52:06 BST 2000 Olly Betts

	* More work on LocalMatch.

Wed Sep 20 17:49:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Updated NEWS

Wed Sep 20 16:48:20 BST 2000 Olly Betts

	* genacinclude.sh now lives in autoconf subdirectory.  List of .m4
	  files is now in buildall and autoconf/Makefile.am.

	* Started to tease apart LocalMatch - created SubMatch class to hold
	  Database and associated StatsSource.

Wed Sep 20 16:04:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.3.1

Wed Sep 20 16:03:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Set up a DIST_SUBDIRS in backends/Makefile.am to ensure that
	  everything that should goes into a distribution.

Wed Sep 20 15:56:40 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More fettling to Quartz - databases now have logic to ensure that
	  correct revisions get opened, and that recovery gets performed
	  if needed.  Tables can now return the currently opened revision
	  number and the latest available.  A log object is always created,
	  but throws away messages if readonly or no path specified.

Wed Sep 20 15:48:22 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Changed std::auto_ptr to AutoPtr everywhere except Quartz

Wed Sep 20 14:27:55 BST 2000 Olly Betts

	* IRDatabase renamed to just plain ol' Database.

Wed Sep 20 13:31:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
