@@ -1,3 +1,7 @@
+Thu Sep 21 11:08:21 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Some tweaks to AutoPtr.
+
 Wed Sep 20 19:07:30 BST 2000 Olly Betts
 
 	* More LocalMatch work.
